# test-those-metrics-talk

./: .gitignore  Cargo.toml  README.md
cart_server/: Cargo.toml
cart_server/src/: configuration.rs  lib.rs  main.rs  tracing.rs
cart_server/src/data_sources/: mod.rs  stock_service.rs
cart_server/src/server/: add_item_to_cart_route.rs  mod.rs  run.rs
cart_server/tests/all/: main.rs  tests.rs
cart_server/tests/all/test_harness/: cart_server_client.rs  mod.rs
cart_server/tests/all/test_harness/mocks/: mod.rs  stock_service_api.rs
cart_server/tests/all/utilities/: mod.rs  retry_loop.rs  span_extensions.rs  tracer.rs
mock_otel_collector/: Cargo.toml  README.md
mock_otel_collector/src/: lib.rs  server.rs
mock_otel_collector/src/jaeger_models/: mod.rs  span_tree.rs
mock_otel_collector/src/jaeger_models/extensions/: mod.rs  span.rs  tag.rs
