[package]
name = "mock_otel_collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.10"
anyhow = "1"
itertools = "0.10"
futures-util = "0.3"
nonempty = "0.7"
rctree = "0.4.0"
reqwest = "0.11"
thrift = "0.15"
